<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_NcAxis_Errors" Id="{0c3915ba-8e2f-4a38-84c8-9cc16d994ca9}">
    <Declaration><![CDATA[TYPE ST_NcAxis_Errors :
STRUCT
	exDriveStatus: BOOL;
	///~ (OPC:1:available for OPC Clients) 
	exDrivePower: BOOL;
	///~ (OPC:1:available for OPC Clients) 
	exDriveJog: BOOL;
	///~ (OPC:1:available for OPC Clients) 
	exDriveReset: BOOL;
	///~ (OPC:1:available for OPC Clients) 

	exDriveAbsoluut				: BOOL;
	exDriveVelocity				: BOOL;
	exDriveStop					: BOOL;
	exWriteParameter			: BOOL;
	exReadParameter				: BOOL;
	exHome						: BOOL;
	exLagError					: BOOL;	(*Lag error*)
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>