<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_NcAxis_SysPar" Id="{57f7ad3d-4bea-4af1-9fe8-ba41b21ff557}">
    <Declaration><![CDATA[TYPE ST_NcAxis_SysPar :
STRUCT
	PositionBias			: LREAL;(* From absolute encoder *)
	IDXGRP				:UDINT := 16#5011;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>